무중단배포 확인위한 수정

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,6 +1,6 @@
 {{>layout/header}}
 
-<h1>알림 서비스 feat.정윤 아이디어</h1>
+<h1>알림 서비스 feat.정윤 아이디어 V.2</h1>
 <div class="col-md-12">
 <!--로그인 기능 영역-->
     <div class="row">
