--- a/src/main/resources/templates/form/layout/base.html
+++ b/src/main/resources/templates/form/layout/base.html
@@ -19,7 +19,7 @@
 <body>
 <div class="sidebar">
 
-    <div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
+    <div class="flex-shrink-0 p-3 bg-white">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
             <span class="fs-5 fw-semibold">윤이네 골동품 가게</span>
         </a>
@@ -69,7 +69,7 @@
                 <div class="collapse" id="goods-collapse">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                         <li><a href="/goods/search" class="link-dark rounded">제품 조회</a></li>
-<!--                        <li><a href="#" class="link-dark rounded">Processed</a></li>-->
+                        <li><a href="/goods/calculate" class="link-dark rounded">제품 가격 계산</a></li>
 <!--                        <li><a href="#" class="link-dark rounded">Shipped</a></li>-->
 <!--                        <li><a href="#" class="link-dark rounded">Returned</a></li>-->
                     </ul>
