--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -7,6 +7,7 @@
     <link th:href="@{/css/index.css}" rel="stylesheet"/>
     <link th:href="@{/css/goods/calculate.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/app/index.js}"></script>
+    <script type="text/javascript" th:src="@{/js/goods/calculate.js}"></script>
     <title th:text="#{page.calculate}">금시세</title>
 </head>
 
@@ -20,36 +21,50 @@
         <div class="col-4">
 
             <div class="input-group mb-3">
-                <span class="input-group-text me-5 col-4 justify-content-center" id="basic-addon2">금 시세(24k 1돈 기준)</span>
+                <span class="input-group-text me-5 col-4 justify-content-center" id="goldMarketValueSpan">금 시세(24k 1돈 기준)</span>
                 <input type="number" class="form-control" placeholder="오늘의 시세를 입력해주세요."
-                       aria-label="시세" aria-describedby="basic-addon2" min="0">
+                       aria-label="시세" aria-describedby="goldMarketValueSpan" min="0" id="goldMarketValue">
             </div>
 
             <!--금 종류 & 금 양-->
             <div class="input-group mb-3">
-                <div class="btn-group me-5 col-4" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                    <label class="btn btn-outline-primary" for="btnradio1">14K</label>
+                <div class="btn-group me-5 col-4" role="group" aria-label="Basic radio toggle button group" id="goldKindGroup">
+                    <input type="radio" class="btn-check" name="btnradio" id="goldKind14K" autocomplete="off" value="14" checked>
+                    <label class="btn btn-outline-primary" for="goldKind14K">14K</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="btnradio2">18K</label>
+                    <input type="radio" class="btn-check" name="btnradio" id="goldKind18K" autocomplete="off" value="18">
+                    <label class="btn btn-outline-primary" for="goldKind18K">18K</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="btnradio3">24K</label>
+                    <input type="radio" class="btn-check" name="btnradio" id="goldKind24K" autocomplete="off" value="24">
+                    <label class="btn btn-outline-primary" for="goldKind24K">24K</label>
                 </div>
-                <input type="number" class="form-control" placeholder="금 중량을 입력해주세요." min="0" aria-label="">
+                <input type="number" class="form-control" placeholder="금 중량을 입력해주세요." min="0" aria-label="" id="goldMount">
             </div>
 
             <div class="input-group mb-3">
                 <span class="input-group-text me-5 col-4 justify-content-center" id="gold_wage">공 임</span>
                 <input type="number" class="form-control" placeholder="공임을 입력해주세요."
-                       aria-label="공임" aria-describedby="gold_wage" min="0">
+                       aria-label="공임" aria-describedby="gold_wage" min="0" id="goldWage">
             </div>
 
             <div class="input-group mb-3">
                 <span class="input-group-text me-5 col-4 justify-content-center" id="gold_margin">마 진</span>
                 <input type="number" class="form-control" placeholder="마진을 입력해주세요."
-                       aria-label="마진" aria-descibedby="gold_margin" min="0">
+                       aria-label="마진" aria-descibedby="gold_margin" min="0" id="goldMargin">
+            </div>
+            <div id="alertPosition"></div>
+
+            <div class="alert alert-warning d-flex align-items-center alert-dismissible fade" role="alert" id="inputAlert">
+                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+                    <use xlink:href="#exclamation-triangle-fill"/></svg>
+                <span id="alertText">
+                </span>
+                <button type="button" class="btn-close" data-bs-dismiss="" aria-label="Close" id="closeBtn"></button>
+            </div>
+
+            <div>
+                <button type="button" class="btn btn-primary btn-lg" th:text="#{button.calculate}" id="calculate">Large button</button>
+                <button type="button" class="btn btn-secondary btn-lg" th:text="#{button.reset}">Large button</button>
             </div>
 
         </div>
