--- a/src/main/resources/static/css/baseCss.css
+++ b/src/main/resources/static/css/baseCss.css
@@ -1,6 +1,7 @@
 body {
     min-height: 100vh;
     min-height: -webkit-fill-available;
+    background-image: url("/image/background.jpg");
 }
 
 html {
