--- a/src/main/resources/templates/form/index.html
+++ b/src/main/resources/templates/form/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <!--bootstrap css-->
-    <link th:href="@{/css/index.css}" rel="stylesheet" />
+    <link th:href="@{/css/baseCss.css}" rel="stylesheet" />
     <script type="text/javascript" th:src="@{/js/app/index.js}"></script>
     <title>윤이네 골동품 가게</title>
 </head>
