--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -4,7 +4,7 @@
 
 <head>
     <!--bootstrap css-->
-    <link th:href="@{/css/index.css}" rel="stylesheet"/>
+    <link th:href="@{/css/baseCss.css}" rel="stylesheet"/>
     <link th:href="@{/css/goods/calculate.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/app/index.js}"></script>
     <script type="text/javascript" th:src="@{/js/goods/calculate.js}"></script>
@@ -12,68 +12,78 @@
 </head>
 
 <body>
-<section class="flex-fill">
-    <div class="text-center">
-        <span>계산기</span>
-    </div>
+<section class="row justify-content-center flex-fill">
+    <div class="col-8 m-5 bg-white shadow rounded">
 
-    <div class="row">
-        <div class="col-4">
+        <div class="text-center m-5 pt-2">
+            <span class="fs-2">계산기</span>
+        </div>
 
-            <div class="input-group mb-3">
-                <span class="input-group-text me-5 col-4 justify-content-center" id="goldMarketValueSpan">금 시세(24k 1돈 기준)</span>
-                <input type="number" class="form-control" placeholder="오늘의 시세를 입력해주세요."
-                       aria-label="시세" aria-describedby="goldMarketValueSpan" min="0" id="goldMarketValue">
-            </div>
+        <div class="row justify-content-center">
+            <div class="col-6">
 
-            <!--금 종류 & 금 양-->
-            <div class="input-group mb-3">
-                <div class="btn-group me-5 col-4" role="group" aria-label="Basic radio toggle button group" id="goldKindGroup">
-                    <input type="radio" class="btn-check" name="btnradio" id="goldKind14K" autocomplete="off" value="14" checked>
-                    <label class="btn btn-outline-primary" for="goldKind14K">14K</label>
-
-                    <input type="radio" class="btn-check" name="btnradio" id="goldKind18K" autocomplete="off" value="18">
-                    <label class="btn btn-outline-primary" for="goldKind18K">18K</label>
-
-                    <input type="radio" class="btn-check" name="btnradio" id="goldKind24K" autocomplete="off" value="24">
-                    <label class="btn btn-outline-primary" for="goldKind24K">24K</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text me-5 col-5 justify-content-center" id="goldMarketValueSpan">금 시세(24k 1돈 기준)</span>
+                    <input type="text" class="form-control text-end" placeholder="오늘의 시세를 입력해주세요."
+                           aria-label="시세" aria-describedby="goldMarketValueSpan" min="0" id="goldMarketValue">
+                    <span class="input-group-text col-1 justify-content-center">원</span>
                 </div>
-                <input type="number" class="form-control" placeholder="금 중량을 입력해주세요." min="0" aria-label="" id="goldMount">
+
+                <!--금 종류 & 금 양-->
+                <div class="input-group mb-3">
+                    <div class="btn-group me-5 col-5" role="group" aria-label="Basic radio toggle button group"
+                         id="goldKindGroup">
+                        <input type="radio" class="btn-check" name="btnradio" id="goldKind14K" autocomplete="off"
+                               value="14" checked>
+                        <label class="btn btn-outline-primary" for="goldKind14K">14K</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="goldKind18K" autocomplete="off"
+                               value="18">
+                        <label class="btn btn-outline-primary" for="goldKind18K">18K</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="goldKind24K" autocomplete="off"
+                               value="24">
+                        <label class="btn btn-outline-primary" for="goldKind24K">24K</label>
+                    </div>
+                    <input type="number" class="form-control text-end" placeholder="금 중량을 입력해주세요." min="0" aria-label=""
+                           id="goldMount">
+                    <span class="input-group-text col-1 justify-content-center">g</span>
+                </div>
+
+                <div class="input-group mb-3">
+                    <span class="input-group-text me-5 col-5 justify-content-center" id="gold_wage">공 임</span>
+                    <input type="number" class="form-control text-end" placeholder="공임을 입력해주세요."
+                           aria-label="공임" aria-describedby="gold_wage" min="0" id="goldWage">
+                    <span class="input-group-text col-1 justify-content-center">원</span>
+                </div>
+
+                <div class="input-group mb-3">
+                    <span class="input-group-text me-5 col-5 justify-content-center" id="gold_margin">마 진</span>
+                    <input type="number" class="form-control text-end" placeholder="마진을 입력해주세요."
+                           aria-label="마진" aria-descibedby="gold_margin" min="0" id="goldMargin">
+                    <span class="input-group-text col-1 justify-content-center">원</span>
+                </div>
+
+                <div id="alertPosition"></div>
+
+                <div class="input-group mb-3">
+                    <div class="btn-group me-5 col-5" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-primary col-5" th:text="#{button.calculate}"
+                                id="calculate">
+                            Large button
+                        </button>
+                        <button type="button" class="btn btn-secondary col-5" th:text="#{button.reset}">Large button
+                        </button>
+                    </div>
+
+                    <input type="text" class="form-control text-end" placeholder="계산 결과" min="0" aria-label=""
+                           id="totalPrice" disabled>
+                    <span class="input-group-text col-1 justify-content-center">원</span>
+                </div>
             </div>
-
-            <div class="input-group mb-3">
-                <span class="input-group-text me-5 col-4 justify-content-center" id="gold_wage">공 임</span>
-                <input type="number" class="form-control" placeholder="공임을 입력해주세요."
-                       aria-label="공임" aria-describedby="gold_wage" min="0" id="goldWage">
-            </div>
-
-            <div class="input-group mb-3">
-                <span class="input-group-text me-5 col-4 justify-content-center" id="gold_margin">마 진</span>
-                <input type="number" class="form-control" placeholder="마진을 입력해주세요."
-                       aria-label="마진" aria-descibedby="gold_margin" min="0" id="goldMargin">
-            </div>
-            <div id="alertPosition"></div>
-
-            <div class="alert alert-warning d-flex align-items-center alert-dismissible fade" role="alert" id="inputAlert">
-                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
-                    <use xlink:href="#exclamation-triangle-fill"/></svg>
-                <span id="alertText">
-                </span>
-                <button type="button" class="btn-close" data-bs-dismiss="" aria-label="Close" id="closeBtn"></button>
-            </div>
-
-            <div>
-                <button type="button" class="btn btn-primary btn-lg" th:text="#{button.calculate}" id="calculate">Large button</button>
-                <button type="button" class="btn btn-secondary btn-lg" th:text="#{button.reset}">Large button</button>
-            </div>
-
-        </div>
-
-        <div class="col-4">
 
         </div>
     </div>
-
 </section>
 </body>
 </html>
