--- a/src/main/resources/templates/form/index.html
+++ b/src/main/resources/templates/form/index.html
@@ -5,7 +5,7 @@
 <head>
     <!--bootstrap css-->
     <link th:href="@{/css/baseCss.css}" rel="stylesheet" />
-    <script type="text/javascript" th:src="@{/js/app/index.js}"></script>
+    <script type="text/javascript" th:src="@{/js/app/base.js}"></script>
     <title>윤이네 골동품 가게</title>
 </head>
 
