--- a/src/main/resources/templates/form/layout/base.html
+++ b/src/main/resources/templates/form/layout/base.html
@@ -7,9 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/.css}">-->
     <link rel="shortcut icon" th:href="@{/image/favicon.ico}">
-
+    <script type="text/javascript" th:src="@{/js/app/base.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!--    <script type="text/javascript" th:src="@{/sh/scripts/codebase.js}"></script>-->
 
     <!-- 추가 -->
     <th:block th:replace="${links}" />
@@ -17,20 +16,11 @@
 </head>
 
 <body>
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
-        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-    </symbol>
-    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
-        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-    </symbol>
-    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-    </symbol>
-</svg>
 <div class="sidebar">
+    <svg th:replace="~{form/layout/svgCollection :: svg}"></svg>
 
-    <div class="flex-shrink-0 p-3 bg-white">
+<!--전체화면일때-->
+    <div class="flex-shrink-0 p-3 bg-white d-none d-lg-block">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
             <span class="fs-5 fw-semibold">윤이네 골동품 가게</span>
         </a>
@@ -79,8 +69,8 @@
                 </button>
                 <div class="collapse" id="goods-collapse">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                        <li><a href="/goods/search" class="link-dark rounded">제품 조회</a></li>
-                        <li><a href="/goods/calculate" class="link-dark rounded">제품 가격 계산</a></li>
+                        <li><a href="/goods/search" class="link-dark rounded" th:text="#{label.goodSearch}"></a></li>
+                        <li><a href="/goods/calculate" class="link-dark rounded" th:text="#{label.goodCalculate}">제품 가격 계산</a></li>
 <!--                        <li><a href="#" class="link-dark rounded">Shipped</a></li>-->
 <!--                        <li><a href="#" class="link-dark rounded">Returned</a></li>-->
                     </ul>
@@ -102,6 +92,60 @@
             </li>
         </ul>
     </div>
+
+<!--화면 줄어들었을때-->
+
+    <div class="d-flex flex-column flex-shrink-0 bg-light d-none d-sm-block d-lg-none " id="sideBarSmall"  style="width: 4.5rem;">
+        <a href="/" class="d-block p-3 link-dark text-decoration-none" title="Icon-only" data-bs-toggle="tooltip" data-bs-placement="right">
+            <svg class="bi" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+            <span class="visually-hidden">Icon-only</span>
+        </a>
+        <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
+            <li class="nav-item">
+                <a href="#" class="nav-link active py-3 border-bottom" aria-current="page" title="Home" data-bs-toggle="tooltip" data-bs-placement="right">
+                    <svg class="bi" width="24" height="24" role="img" aria-label="Home"><use xlink:href="#home"/></svg>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link py-3 border-bottom" title="Dashboard" data-bs-toggle="tooltip" data-bs-placement="right">
+                    <svg class="bi" width="24" height="24" role="img" aria-label="Dashboard"><use xlink:href="#speedometer2"/></svg>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link py-3 border-bottom" title="Orders" data-bs-toggle="tooltip" data-bs-placement="right">
+                    <svg class="bi" width="24" height="24" role="img" aria-label="Orders"><use xlink:href="#table"/></svg>
+                </a>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="nav-link py-3 border-bottom dropdown-toggle" title="Products" data-bs-toggle="dropdown" data-bs-placement="right" id="dropdownProducts">
+                    <svg class="bi" width="24" height="24" role="img" aria-label="Products"><use xlink:href="#grid"/></svg>
+                </a>
+                <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser3">
+                    <li><a class="dropdown-item" href="/goods/search" th:text="#{label.goodSearch}"></a></li>
+                    <li><a class="dropdown-item" href="/goods/calculate" th:text="#{label.goodCalculate}">Settings</a></li>
+
+                </ul>
+            </li>
+            <li>
+                <a href="#" class="nav-link py-3 border-bottom" title="Customers" data-bs-toggle="tooltip" data-bs-placement="right">
+                    <svg class="bi" width="24" height="24" role="img" aria-label="Customers"><use xlink:href="#people-circle"/></svg>
+                </a>
+            </li>
+        </ul>
+        <div class="dropdown border-top">
+            <a href="#" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://github.com/mdo.png" alt="mdo" width="24" height="24" class="rounded-circle">
+            </a>
+            <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser3">
+                <li><a class="dropdown-item" href="#">New project...</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Sign out</a></li>
+            </ul>
+        </div>
+    </div>
+
 
 
     <div th:replace="${content}">
