--- a/src/main/resources/templates/form/layout/base.html
+++ b/src/main/resources/templates/form/layout/base.html
@@ -95,7 +95,7 @@
 
 <!--화면 줄어들었을때-->
 
-    <div class="d-flex flex-column flex-shrink-0 bg-light d-none d-sm-block d-lg-none " id="sideBarSmall"  style="width: 4.5rem;">
+    <div class="d-flex flex-column flex-shrink-0 bg-light d-block d-lg-none d-xl-none " id="sideBarSmall"  style="width: 4.5rem;z-index: 2">
         <a href="/" class="d-block p-3 link-dark text-decoration-none" title="Icon-only" data-bs-toggle="tooltip" data-bs-placement="right">
             <svg class="bi" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
             <span class="visually-hidden">Icon-only</span>
