계산기 결과 값에 중량 추가

--- a/src/main/resources/templates/form/layout/base.html
+++ b/src/main/resources/templates/form/layout/base.html
@@ -20,7 +20,7 @@
     <svg th:replace="~{form/layout/svgCollection :: svg}"></svg>
 
 <!--전체화면일때-->
-    <div class="flex-shrink-0 p-3 bg-white d-none d-lg-block">
+    <div class="flex-shrink-0 p-3 align-items-stretch bg-white d-none d-lg-block align-items-stretch">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
             <span class="fs-5 fw-semibold">윤이네 골동품 가게</span>
         </a>
@@ -95,7 +95,7 @@
 
 <!--화면 줄어들었을때-->
 
-    <div class="d-flex flex-column flex-shrink-0 bg-light d-block d-lg-none d-xl-none " id="sideBarSmall"  style="width: 4.5rem;z-index: 2">
+    <div class="d-flex flex-column flex-shrink-0 bg-light d-block d-lg-none d-xl-none" id="sideBarSmall"  style="width: 4.5rem;z-index: 2">
         <a href="/" class="d-block p-3 link-dark text-decoration-none" title="Icon-only" data-bs-toggle="tooltip" data-bs-placement="right">
             <svg class="bi" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
             <span class="visually-hidden">Icon-only</span>
