--- a/src/main/resources/static/css/baseCss.css
+++ b/src/main/resources/static/css/baseCss.css
@@ -6,6 +6,7 @@ body {
 }
 
 html {
+    min-height: 100vh;
     height: -webkit-fill-available;
 }
 
@@ -13,9 +14,7 @@ html {
     display: flex;
     flex-wrap: nowrap;
     height: 100vh;
-    max-height: 100vh;
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 
