--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -86,6 +86,7 @@
                                 <th scope="col"></th>
                                 <th class="text-center" scope="col">판매가</th>
                                 <th class="text-center" scope="col">스토어팜 판매가</th>
+                                <th class="text-center" scope="col">중량</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -93,16 +94,19 @@
                                 <th class="text-center" scope="row">14k</th>
                                 <td class="text-center" id="14kPrice"></td>
                                 <td class="text-center" id="14kStorePrice"></td>
+                                <td class="text-center" id="14kMount"></td>
                             </tr>
                             <tr id="18kTr">
                                 <th class="text-center" scope="row">18k</th>
                                 <td class="text-center" id="18kPrice"></td>
                                 <td class="text-center" id="18kStorePrice"></td>
+                                <td class="text-center" id="18kMount"></td>
                             </tr>
                             <tr id="24kTr">
                                 <th class="text-center" scope="row">24k</th>
                                 <td class="text-center" id="24kPrice"></td>
                                 <td class="text-center" id="24kStorePrice"></td>
+                                <td class="text-center" id="24kMount"></td>
                             </tr>
                             </tbody>
                         </table>
