계산식 실수 수정 및 label text(판매가 -> 현금 판매가) 변경

--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -84,7 +84,7 @@
                             <thead>
                             <tr>
                                 <th scope="col"></th>
-                                <th class="text-center" scope="col">판매가</th>
+                                <th class="text-center" scope="col">현금 판매가</th>
                                 <th class="text-center" scope="col">스토어팜 판매가</th>
                                 <th class="text-center" scope="col">중량</th>
                             </tr>
