--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -113,6 +113,13 @@
                     </div>
                 </div>
 
+                <div>
+                    <div class="form-floating">
+                        <textarea class="form-control" placeholder="" id="floatingTextarea"></textarea>
+                        <label for="floatingTextarea">메모</label>
+                    </div>
+                </div>
+
             </div>
 
         </div>
