요구사항 수정 - 표 순서 변경 - table column 명 변경

--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -84,29 +84,30 @@
                             <thead>
                             <tr>
                                 <th scope="col"></th>
-                                <th class="text-center" scope="col">현금 판매가</th>
-                                <th class="text-center" scope="col">스토어팜 판매가</th>
                                 <th class="text-center" scope="col">중량</th>
+                                <th class="text-center" scope="col">카드가</th>
+                                <th class="text-center" scope="col">금교환,현금가</th>
+
                             </tr>
                             </thead>
                             <tbody>
                             <tr id="14kTr">
                                 <th class="text-center" scope="row">14k</th>
-                                <td class="text-center" id="14kPrice"></td>
-                                <td class="text-center" id="14kStorePrice"></td>
                                 <td class="text-center" id="14kMount"></td>
+                                <td class="text-center" id="14kStorePrice"></td>
+                                <td class="text-center" id="14kPrice"></td>
                             </tr>
                             <tr id="18kTr">
                                 <th class="text-center" scope="row">18k</th>
-                                <td class="text-center" id="18kPrice"></td>
-                                <td class="text-center" id="18kStorePrice"></td>
                                 <td class="text-center" id="18kMount"></td>
+                                <td class="text-center" id="18kStorePrice"></td>
+                                <td class="text-center" id="18kPrice"></td>
                             </tr>
                             <tr id="24kTr">
                                 <th class="text-center" scope="row">24k</th>
-                                <td class="text-center" id="24kPrice"></td>
-                                <td class="text-center" id="24kStorePrice"></td>
                                 <td class="text-center" id="24kMount"></td>
+                                <td class="text-center" id="24kStorePrice"></td>
+                                <td class="text-center" id="24kPrice"></td>
                             </tr>
                             </tbody>
                         </table>
