요구사항 수정 - 표 순서 변경 - table column 명 변경

--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -86,7 +86,7 @@
                                 <th scope="col"></th>
                                 <th class="text-center" scope="col">중량</th>
                                 <th class="text-center" scope="col">카드가</th>
-                                <th class="text-center" scope="col">금교환,현금가</th>
+                                <th class="text-center" scope="col">최대할인</th>
 
                             </tr>
                             </thead>
