--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -114,8 +114,8 @@
                     </div>
                 </div>
 
-                <div>
-                    <div class="form-floating">
+                <div class="d-flex justify-content-center">
+                    <div class="form-floating col-8">
                         <textarea class="form-control" placeholder="" id="floatingTextarea"></textarea>
                         <label for="floatingTextarea">메모</label>
                     </div>
