--- a/src/main/resources/templates/form/index.html
+++ b/src/main/resources/templates/form/index.html
@@ -10,8 +10,13 @@
 </head>
 
 <body>
-    <section>
-        <h2> 메인페이지야!</h2>
-    </section>
+<section class="row justify-content-center flex-fill">
+    <div class="col-lg-8 col-md-10 m-lg-5 m-md-1 m-sm-5 bg-white shadow rounded d-flex align-items-center">
+        <div class="col-12">
+            <img th:src="@{/image/mainpage.jpg}" class="round col-12"/>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
