goods -> item 이름 변경

--- a/src/main/resources/templates/form/item/itemCalculate.html
+++ b/src/main/resources/templates/form/item/itemCalculate.html
@@ -5,9 +5,9 @@
 <head>
     <!--bootstrap css-->
     <link th:href="@{/css/baseCss.css}" rel="stylesheet"/>
-    <link th:href="@{/css/goods/calculate.css}" rel="stylesheet"/>
+    <link th:href="@{/css/item/calculate.css}" rel="stylesheet"/>
 
-    <script type="text/javascript" th:src="@{/js/goods/calculate.js}"></script>
+    <script type="text/javascript" th:src="@{/js/item/calculate.js}"></script>
     <title th:text="#{page.calculate}">금시세</title>
 </head>
 
