--- a/src/main/resources/templates/form/item/itemSearch.html
+++ b/src/main/resources/templates/form/item/itemSearch.html
@@ -6,12 +6,32 @@
     <!--bootstrap css-->
     <link th:href="@{/css/baseCss.css}" rel="stylesheet" />
     <script type="text/javascript" th:src="@{/js/app/base.js}"></script>
-    <title>윤이네 골동품 가게</title>
+    <title>제품 검색</title>
 </head>
 
 <body>
-    <section>
-        <h2>검색페이지야!!</h2>
-    </section>
+<section class="row justify-content-center flex-fill">
+    <div class="col-lg-8 col-md-10 m-lg-5 m-md-1 m-sm-5 bg-white shadow rounded">
+
+        <div class="text-center m-5 pt-2">
+            <span class="fs-2">제품 검색</span>
+        </div>
+
+        <div class="col-8 input-group mb-3 d-flex justify-content-center">
+            <div class="col-8">
+                <input type="text" class="form-control" placeholder="모델번호를 입력해주세요" aria-label="modelNumber" aria-describedby="searchBtn">
+            </div>
+            <div class="ms-3">
+                <button class="btn btn-outline-secondary" type="button" th:field="searchBtn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>검색
+                </button>
+            </div>
+        </div>
+
+
+    </div>
+</section>
 </body>
 </html>
