--- a/src/main/resources/templates/form/item/itemSearch.html
+++ b/src/main/resources/templates/form/item/itemSearch.html
@@ -17,17 +17,39 @@
             <span class="fs-2">제품 검색</span>
         </div>
 
-        <div class="col-8 input-group mb-3 d-flex justify-content-center">
-            <div class="col-8">
-                <input type="text" class="form-control" placeholder="모델번호를 입력해주세요" aria-label="modelNumber" aria-describedby="searchBtn">
+        <form th:object="${itemSearch}" method="get">
+            <div class="col-8 input-group mb-3 d-flex justify-content-center">
+                <div class="col-8">
+                    <input type="text" th:field="*{modelNumber}" class="form-control" placeholder="모델번호를 입력해주세요" aria-label="modelNumber" aria-describedby="searchBtn">
+                </div>
+                <div class="ms-3">
+                    <button class="btn btn-outline-secondary" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                        </svg>검색
+                    </button>
+                </div>
             </div>
-            <div class="ms-3">
-                <button class="btn btn-outline-secondary" type="button" th:field="searchBtn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                    </svg>검색
-                </button>
-            </div>
+        </form>
+
+        <div>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>상품명</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="item : ${items}">
+                    <td th:text="${item.modelNumber}"></td>
+                    <td>
+                        <a href="#" th:href="@{/items/{id}/edit (id=${item.id})}" class="btn btn-primary"
+                           role="button">수정</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
 
 
