금시세 저장 및 조회 구현

--- a/src/main/resources/static/css/baseCss.css
+++ b/src/main/resources/static/css/baseCss.css
@@ -1,19 +1,21 @@
 body {
     min-height: 100vh;
-    min-height: -webkit-fill-available;
+    height: 100%;
+    /*height: -webkit-fill-available;*/
     background-image: url("/image/background.jpg");
     background-size: cover;
 }
 
 html {
     min-height: 100vh;
-    height: -webkit-fill-available;
+    height: 100%;
+    /*height: -webkit-fill-available;*/
 }
 
 .sidebar {
     display: flex;
     flex-wrap: nowrap;
-    height: 100vh;
+    height: 100%;
     overflow-x: hidden;
 }
 
