--- a/src/main/resources/templates/form/item/createItemForm.html
+++ b/src/main/resources/templates/form/item/createItemForm.html
@@ -49,13 +49,23 @@
                         </div>
 
                         <div class="col-sm-6">
-                            <label th:for="purchaseStoreNumber" class="form-label">제조사 No</label>
-                            <input type="text" class="form-control" th:field="*{purchaseStoreNumber}" placeholder="" value="">
+                            <label th:for="manufacturerNumber" class="form-label">제조사 No</label>
+                            <input type="text" class="form-control" th:field="*{manufacturerNumber}" placeholder="" value="">
+                        </div>
+                        <!----------------------------------------------------->
+                        <div class="col-sm-6">
+                            <label th:for="purchaseStore" class="form-label">관련품목</label>
+                            <input type="text" class="form-control" th:field="*{aboutProduct}" placeholder="" value="">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label th:for="purchaseStoreNumber" class="form-label">세트 타입</label>
+                            <input type="text" class="form-control" th:field="*{setType}" placeholder="" value="">
                         </div>
                         <!----------------------------------------------------->
                         <div class="col-sm-6">
                             <label th:for="basicMount" class="form-label">표준 중량</label>
-                            <input type="text" class="form-control" th:field="*{basicMount}" placeholder="" value="">
+                            <input type="number" step="0.01" class="form-control" th:field="*{basicMount}" placeholder="" value="">
                         </div>
 
                         <div class="col-sm-6">
@@ -133,6 +143,17 @@
                             <input type="text" class="form-control" th:field="*{supportWage}" placeholder="" value="0">
                         </div>
 
+                    </div>
+
+                    <hr class="my-4">
+
+                    <h4 class="mb-3">마진</h4>
+                    <div class="row">
+                        <!----------------------------------------------------->
+                        <div class="col-sm-4">
+                            <label th:for="margin" class="form-label">이윤</label>
+                            <input type="text" class="form-control" th:field="*{margin}" placeholder="" value="0">
+                        </div>
                     </div>
 
                     <hr class="my-4">
