--- a/src/main/resources/templates/form/item/goldPrice.html
+++ b/src/main/resources/templates/form/item/goldPrice.html
@@ -27,17 +27,17 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td th:text="${#dates.format(latestPrice.getRecordTime(),'yyyy-MM-dd HH:mm:ss')}"></td>
-                    <td th:text="${latestPrice.getPrice()}"></td>
+                    <td th:if="${latestPrice!=null}" th:text="${#temporals.format(latestPrice.getRecordTime(),'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <td th:if="${latestPrice!=null}" th:text="${latestPrice.getPrice()}"></td>
                 </tr>
                 </tbody>
             </table>
         </div>
 
-        <form role="form" method="Post" action="/item/goldPrice">
+        <form role="form" method="Post" action="/item/saveGoldPrice">
             <div class="col-8 input-group mb-3 d-flex justify-content-center">
                 <div class="col-6">
-                    <input type="number" class="form-control" placeholder="금시세를 입력해주세요" aria-label="goldMarketCondition">
+                    <input type="number" name="goldPrice" class="form-control" placeholder="금시세를 입력해주세요" aria-label="goldMarketCondition">
                 </div>
                 <div class="ms-3">
                     <button class="btn btn-outline-secondary" type="submit">시세 변경</button>
