--- a/src/main/resources/templates/form/item/itemSearch.html
+++ b/src/main/resources/templates/form/item/itemSearch.html
@@ -4,7 +4,8 @@
 
 <head>
     <!--bootstrap css-->
-    <link th:href="@{/css/baseCss.css}" rel="stylesheet" />
+    <link th:href="@{/css/baseCss.css}" rel="stylesheet"/>
+    <link th:href="@{/css/item/search.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/app/base.js}"></script>
     <title>제품 검색</title>
 </head>
@@ -20,36 +21,75 @@
         <form th:object="${itemSearch}" method="get">
             <div class="col-8 input-group mb-3 d-flex justify-content-center">
                 <div class="col-8">
-                    <input type="text" th:field="*{modelNumber}" class="form-control" placeholder="모델번호를 입력해주세요" aria-label="modelNumber" aria-describedby="searchBtn">
+                    <input type="text" th:field="*{modelNumber}" class="form-control" placeholder="모델번호를 입력해주세요"
+                           aria-label="modelNumber" aria-describedby="searchBtn">
                 </div>
                 <div class="ms-3">
                     <button class="btn btn-outline-secondary" type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                        </svg>검색
+                        </svg>
+                        검색
                     </button>
                 </div>
             </div>
         </form>
 
         <div>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>상품명</th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="item : ${items}">
-                    <td th:text="${item.modelNumber}"></td>
-                    <td>
-                        <a href="#" th:href="@{/items/{id}/edit (id=${item.id})}" class="btn btn-primary"
-                           role="button">수정</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <div>
+                <span>검색 결과 : </span>
+                <span th:text="${items.size()}"></span>
+            </div>
+            <div th:if="${goldPrice == null}" th:text="'금시세를 먼저 설정해주세요'">
+            </div>
+
+            <div th:if="${goldPrice != null}">
+                <ul th:each="item : ${items}">
+                    <li class="item-list">
+                        <div class="item-photo">
+                            <!--                                <img th:src="@{/image/logo.png}">-->
+                        </div>
+
+                        <a class="item-link"  th:href="@{/items/{id}/edit (id=${item.id})}">
+                            <div class="row item-link-div">
+                                <div class="item-link-div-content">
+                                    <strong th:text="${item.modelNumber}"></strong>
+                                    <p class="item-memo" th:if="${item.memo!=null}" th:text="${item.memo}"></p>
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex">
+                                            <div class="me-5">
+                                                <span>14K 가격 :</span>
+                                                <span th:if="${item.basicMount}!=null"
+                                                      th:text="${#numbers.formatInteger(item.basicMount * goldPrice + item.margin,0,'COMMA')}">중량을 설정해주세요</span>
+                                            </div>
+                                            <div>
+                                                <span>18K 가격 :</span>
+                                                <span th:if="${item.basicMount}!=null"
+                                                      th:text="${#numbers.formatInteger(item.basicMount * 1.13 * goldPrice + item.margin,0,'COMMA')}">중량을 설정해주세요</span>
+                                            </div>
+                                        </div>
+                                        <div th:if="${item.margin==0}">
+                                            <span class="text-danger">*이윤이 0으로 설정되어있습니다.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+
+                        <div class="item-button">
+                            <button class="btn btn-primary mb-3"
+                                    type="button">공임 수정
+                            </button>
+                            <button class="btn btn-primary"
+                                    type="button">문구 복사
+                            </button>
+                        </div>
+
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
