--- a/src/main/resources/static/css/item/search.css
+++ b/src/main/resources/static/css/item/search.css
@@ -1,3 +1,4 @@
+
 ul{
     margin: 0;
     padding: 0;
@@ -64,4 +65,15 @@ ul{
     right: 0;
     bottom: 30px;
     width: 136px;
+}
+
+.hoverPrice{
+
+    background: white;
+    z-index: 99;
+    display: none;
+    position: fixed;
+    right: 20px;
+    bottom: 50%;
+    overflow: visible;
 }
