데이터 형식 변경

--- a/src/main/resources/templates/form/item/createItemForm.html
+++ b/src/main/resources/templates/form/item/createItemForm.html
@@ -81,7 +81,7 @@
 
                         <div class="col-sm-6">
                             <label th:for="stoneQuantity" class="form-label">알 수</label>
-                            <input type="number" class="form-control" th:field="*{stoneQuantity}" placeholder="" value="">
+                            <input type="text" class="form-control" th:field="*{stoneQuantity}" placeholder="" value="">
                         </div>
                         <!----------------------------------------------------->
 
